	PR c++/17068 	* pt.c (dependent_template_p): Treat IDENTIFIER_NODEs as 	dependent.

PR c++/17068
	* g++.dg/template/operator4.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@86199 138bc75d-0d04-0410-961f-82ee72b054a4